--- a/website-designing/module-2-html-html5/html/practical/8-style.html
+++ b/website-designing/module-2-html-html5/html/practical/8-style.html
@@ -22,10 +22,14 @@ h1
 color: blue;
 text-align: center;
 text-decoration: underline;    
+font-size: 55px;
+font-family: cursive;
 }  
 p{
-    text-align: center;
-    color: blue;
+text-align: center;
+color: blue;
+font-size: 25px;
+font-family: cursive;
 }
 </style>
 </head>
